--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,6 @@
 <body>
 <h2>Hi, my name is Roman</h2> 
 <li>Country :<a href="https://www.instagram.com/gm.ralf">RU</a></li>
-<li>Working at :<a href="http://omsk.uphero.com">FREELANCE</a></li>
+<li>Working at :<a href="mailto:">FREELANCE</a></li>
 </body> 
 </html>
